WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151490
[GTK] Some unit tests fail when using the network process
https://bugs.webkit.org/show_bug.cgi?id=151490
Summary
[GTK] Some unit tests fail when using the network process
Carlos Garcia Campos
Reported
2015-11-20 05:00:34 PST
/webkit2/WebKitWebView/sync-request-on-max-conns: TIMEOUT /webkit2/WebKitWebResource/get-data: ** ERROR:../../Tools/TestWebKitAPI/Tests/WebKit2Gtk/TestResources.cpp:195:void ResourcesTest::checkResourceData(WebKitWebResource*): code should not be reached /webkit2/WebKitAccessibility/atspi-basic-hierarchy: TIMEOUT
Attachments
Patch
(5.34 KB, patch)
2015-11-20 06:39 PST
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2015-11-20 06:33:30 PST
(In reply to
comment #0
)
> /webkit2/WebKitWebView/sync-request-on-max-conns: TIMEOUT
This works with the web process only because all request started are done before the first subresource is processed by the server, something that doesn't happen when using the network process. We are using mutexes in the same main thread, the soup server should run in a separate thread for this to work properly.
> /webkit2/WebKitWebResource/get-data: ** > ERROR:../../Tools/TestWebKitAPI/Tests/WebKit2Gtk/TestResources.cpp:195:void > ResourcesTest::checkResourceData(WebKitWebResource*): code should not be > reached
I haven't investigated this yet, but running the soup server in a thread also fixed this one.
> /webkit2/WebKitAccessibility/atspi-basic-hierarchy: TIMEOUT
No idea about this one, yet. I'll submit a patch to fix the other two for now.
Carlos Garcia Campos
Comment 2
2015-11-20 06:39:07 PST
Created
attachment 265952
[details]
Patch
Carlos Garcia Campos
Comment 3
2015-11-22 00:56:42 PST
(In reply to
comment #0
)
> /webkit2/WebKitWebView/sync-request-on-max-conns: TIMEOUT > > /webkit2/WebKitWebResource/get-data: ** > ERROR:../../Tools/TestWebKitAPI/Tests/WebKit2Gtk/TestResources.cpp:195:void > ResourcesTest::checkResourceData(WebKitWebResource*): code should not be > reached > > /webkit2/WebKitAccessibility/atspi-basic-hierarchy: TIMEOUT
This one is timing out for me locally even when using the web process, so it's ot related.
Carlos Garcia Campos
Comment 4
2015-11-22 01:00:58 PST
Committed
r192729
: <
http://trac.webkit.org/changeset/192729
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug